<resources>
    <string name="app_name">OppoMonitoring</string>
    <string name="finger">Finger Print</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_fingerprint">One-touch Sign In</string>
    <string name="desc_fingerprint">Silakan letakkan ujung jari Anda di pemindai untuk memverifikasi identitas Anda</string>
    <string name="note">(Sidik jari masuk membuat aplikasi Anda masuk lebih cepat. Perangkat Anda harus memiliki setidaknya satu sidik jari yang terdaftar dalam pengaturan perangkat)</string>
    <string name="title_activity_home">Fingerprint</string>
    <string name="activity_home_desc">You have successfully logged in with fingerprint authentication</string>
    <string name="activity_home_note">Close and re-open the app to see the fingerprint auth screen again</string>
    <string name="oppo_mentoring_app">OPPO Mentoring App</string>
    <string name="selamat">PLN Service</string>
    <string name="versi">Versi Beta</string>
    <string name="title1">Keluhan</string>
    <string name="title2">Profile</string>
    <string name="title3">Notifikasi</string>
    <string name="desikripsi1">Jika terjadi gangguan silahkan menghubungi kami.</string>
    <string name="desikripsi2">Jika anda pindah rumah silahkan lengkapi alamat anda. </string>
    <string name="desikripsi3">Jika menerima notifikasi tanda keluhan anda sudah kami proses.</string>
    <string name="daftar">Daftar</string>
    <string name="login">Masuk</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="no_tampe">NIK</string>
    <string name="password">PASSWORD</string>
    <string name="ulpassword">ULANG PASSWORD</string>
    <string name="tanya">Belum daftar? <u>Daftar Sekarang</u></string>
    <string name="tanya2">Saya setuu dengan <u>Syarat dan Kententuan</u> PT.PLN</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="tambah_sidik_jari">Tambah Sidik Jari</string>
    <string name="upload_data_fingerprint">Upload Data FingerPrint</string>
    <string name="mentoring_karyawan">Mentoring Karyawan</string>
    <string name="default_nik">Nik : 1137050105</string>
    <string name="default_name">Nama : Chalu Eko</string>
    <string name="default_date">Tanggal : 11-06-2018</string>
    <string name="default_alamat">Alamat : Jl. KH. Ahmad Dahlan No.43</string>
    <string name="selesai">Selesai</string>
    <string name="lokasi_karyawan">Lokasi Karyawan</string>
    <string name="networkerror">Network Error</string>
    <string name="ServerError">Server Error</string>
    <string name="AuthFailureError">Auth failure</string>
    <string name="ParseError">Parse Error</string>
    <string name="NoConnectionError">No conection</string>
    <string name="gps_disabled_message">Plaese turn on your gps</string>
    <string name="TimeoutError">Request Timeout</string>
    <string name="API_KEY">AIzaSyD3NrLpmYGTuzZ3c3gED7lqfUP-nNrxiUU</string>
    <string name="list_karyawan">List Karyawan</string>
</resources>
