<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dimen10dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen130dp"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/small_margin"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="center"
            android:padding="@dimen/dimen10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_nik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_nik"
                android:textColor="@color/black"
                android:textSize="@dimen/text16sp" />

            <TextView
                android:id="@+id/txt_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_name"
                android:textColor="@color/black"
                android:textSize="@dimen/text16sp" />

            <TextView
                android:id="@+id/txt_tanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_date"
                android:textColor="@color/black"
                android:textSize="@dimen/text16sp" />

            <TextView
                android:id="@+id/txt_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_alamat"
                android:textColor="@color/black"
                android:textSize="@dimen/text16sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>