<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/putih"
        android:orientation="vertical"
        android:padding="@dimen/margin9dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin30dp"
            android:text="@string/no_tampe"
            android:textSize="@dimen/textSize12sp" />

        <EditText
            android:id="@+id/et_nik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin9dp"
            android:text="@string/password"
            android:textSize="@dimen/textSize12sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/masuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin30dp"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="@color/putih" />

        <TextView
            android:id="@+id/tanya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin9dp"
            android:text="@string/tanya"
            android:textColor="@color/hitam"
            android:textSize="@dimen/textSize12sp" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>